# NeuralDojo

./: .gitignore  README.md  index.html  main.js  styles.css  worker.js
market_NN_plus_ultra/: .dockerignore  QUICKSTART.md  README.md  pyproject.toml  task_tracker.md
market_NN_plus_ultra/configs/: day_trading.yaml  day_trading_stable.yaml  default.yaml  default_desktop.yaml  mvp_pretrain.yaml  mvp_quickstart.yaml  pretrain.yaml  pretrain_desktop.yaml  swing_trading.yaml
market_NN_plus_ultra/docker/: Dockerfile.gpu  entrypoint.sh
market_NN_plus_ultra/docs/: architecture.md  containerization.md  generated_features.md  implementation_plan.md  monitoring.md  operations.md  quickstart_mvp.md  reporting.md  research_agenda.md  signal_coverage.md  sqlite_schema.md
market_NN_plus_ultra/market_nn_plus_ultra/: __init__.py
market_NN_plus_ultra/notebooks/: mvp_profitability_walkthrough.ipynb  mvp_retraining_walkthrough.ipynb
market_NN_plus_ultra/scripts/: __init__.py  annotate_trades.py  bootstrap_sqlite.py  ci_compile.py  continuous_training.py  export_features.py  fetch_market_data.py  generate_report.py  launch.py  make_fixture.py  operations_summary.py  pretrain.py  profile_backbone.py  rl_finetune.py  run_agent.py  service.py  train.py  walkforward_eval.py
market_NN_plus_ultra/tests/: conftest.py  test_alternative_data.py  test_annotate_trades_cli.py  test_annotations.py  test_automation.py  test_benchmarking.py  test_calibration_head.py  test_cross_asset.py  test_curriculum.py  test_dataset_build_cli.py  test_diagnostics.py  test_feature_pipeline.py  test_fixture_script.py  test_guardrails.py  test_labelling.py  test_market_state_embeddings.py  test_metrics.py  test_monitoring.py  test_multi_scale_backbone.py  test_operations_cli.py  test_operations_summary.py  test_pnl.py  test_pretraining.py  test_profiling.py  test_reinforcement.py  test_reporting.py  test_retraining_scheduler.py  test_risk_objectives.py  test_service.py  test_simulation.py  (+11 more)
(+104 files in other folders)
